avoid blurriness when xooming in

--- a/roskilde-pixel-art-frontend/src/app/components/main-canvas/main-canvas.component.css
+++ b/roskilde-pixel-art-frontend/src/app/components/main-canvas/main-canvas.component.css
@@ -1,2 +1,12 @@
-canvas { border: 1px solid black; }
-        .color { cursor: pointer; width: 20px; height: 20px; display: inline-block; }
+canvas {
+        border: 1px solid black;
+        image-rendering: pixelated;
+      }
+      
+      .color {
+        cursor: pointer;
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+      }
+      
